# OpenGLShowcase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Lectures.cpp  Lectures.h  Showcase.cpp  Showcase.h  main.cpp  pch.h
src/Assets/Models/ModelLoading/: Pistol.mtl
src/Assets/Models/Pangong/: Lake.mtl
src/Lectures/: HelloTriangle.cpp  HelloTriangle.h  HelloWindow.cpp  HelloWindow.h
src/Lectures/AdvancedOpenGL/Blending/: Blending.cpp  Blending.h  Model.frag  Model.vert  Window.frag  Window.vert
src/Lectures/AdvancedOpenGL/DepthTesting/: DepthTesting.cpp  DepthTesting.frag  DepthTesting.h
src/Lectures/AdvancedOpenGL/FaceCulling/: FaceCulling.cpp  FaceCulling.frag  FaceCulling.h
src/Lectures/AdvancedOpenGL/StencilTesting/: OutlineShader.frag  StencilTesting.cpp  StencilTesting.h
src/Lectures/GettingStarted/: HelloTriangle.cpp  HelloTriangle.h  HelloWindow.cpp  HelloWindow.h
src/Lectures/GettingStarted/Camera/: Camera.cpp  Camera.h  CameraLecture.cpp  CameraLecture.h
src/Lectures/GettingStarted/CoordinateSystem/: CoordinateSystem.cpp  CoordinateSystem.h  CoordinateSystem.vert
src/Lectures/GettingStarted/HelloTriangle/: HelloTriangle.cpp  HelloTriangle.h
src/Lectures/GettingStarted/HelloWindow/: HelloWindow.cpp  HelloWindow.h
src/Lectures/GettingStarted/Shader/: Shader.h  ShaderLecture.cpp  ShaderLecture.h  Triangle.frag  Triangle.vert
src/Lectures/GettingStarted/Texture/: Texture.frag  Texture.vert  TextureLecture.cpp  TextureLecture.h
src/Lectures/GettingStarted/Transformations/: Transformations.cpp  Transformations.frag  Transformations.h  Transformations.vert
src/Lectures/Lighting/BasicLighting/: BasicLighting.cpp  BasicLighting.h  Cube.frag
src/Lectures/Lighting/Colors/: ColorLecture.cpp  ColorLecture.h  Cube.frag  LightCube.frag  LightCube.vert
src/Lectures/Lighting/LightCasters/: LightCasters.cpp  LightCasters.frag  LightCasters.h
src/Lectures/Lighting/LightingMaps/: LightingMaps.cpp  LightingMaps.frag  LightingMaps.h
src/Lectures/Lighting/Materials/: Materials.cpp  Materials.frag  Materials.h  Materials.vert
src/Lectures/Lighting/MultipleLights/: MultipleLights.cpp  MultipleLights.frag  MultipleLights.h
src/Lectures/ModelLoading/: Mesh.h  Model.h  ModelLoadingLecture.cpp  ModelLoadingLecture.h
src/Lectures/ModelLoading/Shaders/: LightSphere.vert  Model.frag
